# modelrouter

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
src/modelrouter/: __init__.py  __main__.py  gui.py  router.py
tests/: test_modelrouter.py
