[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelrouter"
version = "0.2.0"
description = "Route LLM requests to appropriate models based on configurable rules"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
modelrouter-gui = "modelrouter.gui:launch_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/modelrouter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
